
{{$NEXT}}

1.17      2019-03-14 04:05:15+00:00 UTC

1.16_01   2019-03-13 03:40:02+00:00 UTC (TRIAL RELEASE)

    - Need FFI::Platypus specified as a configure dependency
      (GH#42 - thanks @eserte)

1.15      2019-03-03 10:14:00+00:00 UTC

    - Bump FFI::Platypus dependency version to 0.86
      https://github.com/Perl5-FFI/FFI-Platypus/issues/117
    - Fix t/device.t hang, seems to be same cause/fix as GH#37
    - Update ZMQ::FFI::Constants pod to also list libzmq as one of the repos
      used
    - Don't prune constants generation script from release tarball

1.14      2019-02-28 18:49:49+00:00 UTC

    - The ZMQ::FFI::Constants generation script wasn't using stable releases
      tagged in the libzmq main repo, this is fixed
    - FFI::TinyCC is no longer an author dep and has been replaced by a docker
      based solution for generating ZMQ::FFI::Constants, including calculating
      zmq_msg_t sizes
    - Fix potential memleak around socket cleanup (GH#33 - thanks @rhrhunter!)
    - Use string literals for matching option types (GH#30 - thanks @bbkr)

1.12      2019-02-26 05:16:15-05:00 America/New_York

    - Fix t/proxy.t hang (GH#37)

1.11      2016-01-10 19:27:05-05:00 America/New_York

    - Fix bareword error in closed_socket.t (GH#27 - thanks @rhrhunter)

1.10      2016-01-09 15:50:59-05:00 America/New_York

    - support importing zmq constants directly through ZMQ::FFI (GH#24)
    - don't execute operations on closed sockets and emit appropriate warnings
      (GH#23)

1.09      2015-12-09 04:55:20-06:00 America/Chicago

    - add more robust cleanup handling for ooo global destruction scenarios.

1.08      2015-11-07 10:47:10-06:00 America/Chicago

    - Fix cleanup handling when using Perl threads

1.07      2015-09-19 12:38:32-05:00 America/Chicago

    - Add 4.1 to xt/test_versions.sh
    - Add missing 4.1 stable constants. Update constants generation script
      to handle hex constant values.