@@ -67,6 +67,19 @@ repo = zmq-ffi
 
 [MetaJSON]
 
+[Meta::Contributors]
+contributor = Dave Lambley <github@davel.me.uk>
+contributor = Graham Ollis <perl@wdlabs.com>
+contributor = Klaus Ita <klaus@worstofall.com>
+contributor = Marc Mims <marc@questright.com>
+contributor = Parth Gandhi <parth.gandhi85@gmail.com>
+contributor = Pawel Pabian <bbkr@post.pl>
+contributor = Robert Hunter <rh.rhunter@gmail.com>
+contributor = Sergey KHripchenko <shripchenko@intermedia.net>
+contributor = Slaven Rezic <slaven@rezic.de>
+contributor = Whitney Jackson <whjackson@gmail.com>
+contributor = pipcet <pipcet@gmail.com>
+
 [Git::Commit]
 allow_dirty = Changes
 commit_msg  = version => %v
