@@ -1,6 +1,8 @@
 
 {{$NEXT}}
 
+    - Document contributors
+
 1.17      2019-03-14 04:05:15+00:00 UTC
 
 1.16_01   2019-03-13 03:40:02+00:00 UTC (TRIAL RELEASE)
